--- a/static/index.html
+++ b/static/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <div class="container">
+        <nav>
+            <a class="nav__link marginRight" href="./register.html">Register</a>
+            <a class="nav__link" href="#">About</a>
+        </nav>
         <div class="form">
             <h1 class="form__title">TNS</h1>
             <input class="search" autocomplete="off" type="text" id="searchKey">
