add nav bar to register page

--- a/static/index.html
+++ b/static/index.html
@@ -11,12 +11,12 @@
     <div class="container">
         <nav>
             <a class="nav__link marginRight" href="./register.html">Register</a>
-            <a class="nav__link" href="#">About</a>
+            <a class="nav__link" href="./index.html">About</a>
         </nav>
         <div class="form">
             <h1 class="form__title">TNS</h1>
             <input class="search" autocomplete="off" type="text" id="searchKey">
-            <select id="netDropdown">
+            <select class="form__select" id="netDropdown">
                 <option value="mainnet">Mainnet</option>
                 <option value="ropsten">Ropsten</option>
             </select><br>
