--- a/static/register.html
+++ b/static/register.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <title>Storgate</title>
+
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/web3@0.19.0/dist/web3.js"></script>
     <script type="text/javascript">
     window.addEventListener('load', function() {
@@ -50,7 +54,14 @@
 </head>
 
 <body>
-    <div id="output">Test web3</div>
+    <div class="container">
+        <div class="marginBottom" id="output">Test web3</div>
+        <nav>
+            <a class="nav__link marginRight" href="./register.html">Register</a>
+            <a class="nav__link" href="./index.html">About</a>
+        </nav>
+        
+    </div>
 </body>
 
 </html>
