--- a/static/register.html
+++ b/static/register.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <title>Storgate</title>
 
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/web3@0.19.0/dist/web3.js"></script>
+    <script type="text/javascript" src="web3.js"></script>
     <script type="text/javascript">
     window.addEventListener('load', function() {
         
@@ -60,7 +60,12 @@
             <a class="nav__link marginRight" href="./register.html">Register</a>
             <a class="nav__link" href="./index.html">About</a>
         </nav>
-        
+        <div class="register__buttonGroup">
+            <button class="register__button">Name</button>
+            <button class="register__button">Resolvor</button>
+            <button class="register__button">Onion</button>
+            <p class="register_text">Success</p>
+        </div>
     </div>
 </body>
 
