--- a/static/index.html
+++ b/static/index.html
@@ -14,7 +14,7 @@
             <a class="nav__link" href="./index.html">About</a>
         </nav>
         <div class="form">
-            <h1 class="form__title">TNS</h1>
+            <img class="form__img" src="img/main-logo-official.png" />
             <input class="search" autocomplete="off" type="text" id="searchKey">
             <select class="form__select" id="netDropdown">
                 <option value="mainnet">Mainnet</option>
