add content to about page

--- a/static/about.html
+++ b/static/about.html
@@ -1,21 +1,59 @@
-# Storgate
-Eth New York team project
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <title>Storgate</title>
+</head>
+<body>
+    <div class="container">
+        <nav>
+            <a class="nav__link marginRight" href="./index.html">Home</a>
+            <a class="nav__link" href="./about.html">About</a>
+        </nav>
+        <main>
+            <h1>Storgate</h1>
+            <h2>Eth New York team project</h2>
 
-## Inspiration
-The [TOR network](https://2019.www.torproject.org/docs/onion-services.html.en) provides privacy to [millions of users](https://metrics.torproject.org/userstats-relay-country.html) around the world. Today, one of the major drawback for a wide adoption of Tor is the lack of a human-readable naming system. The onion addresses used to reach a node in the Tor network are part of the cryptographic protocol required, and as such they are a practically a random sequence of characters.
+            <div class="about__box">
+                <h2>Inspiration</h2>
+                <p>The [TOR network](https://2019.www.torproject.org/docs/onion-services.html.en) provides privacy to 
+                    [millions of users](https://metrics.torproject.org/userstats-relay-country.html) around the world.
+                    Today, one of the major drawback for a wide adoption of Tor is the lack of a human-readable naming system.
+                    The onion addresses used to reach a node in the Tor network are part of the cryptographic protocol required,
+                    and as such they are a practically a random sequence of characters.
+                </p>
+                <p>
+                    The community has proposed [various solutions](https://blog.torproject.org/cooking-onions-names-your-onions), but there are shortcomings for each of that. 
+                    The [ENS](https://ens.domains/) offers the perfect platform to solve many of these issues. User
+                </p>  
+            </div>
 
-The community has proposed [various solutions](https://blog.torproject.org/cooking-onions-names-your-onions), but there are shortcomings for each of that. 
-The [ENS](https://ens.domains/) offers the perfect platform to solve many of these issues. User 
+            <div class="about__box">
+                <h2>What it does</h2>
+                <p>
+                    
+                </p>
+            </div>
 
-## What it does
+            <div class="about__box">
+                <h2>Challenges we ran into</h2>
+                <p></p>
+            </div>
 
-## Challenges we ran into
+            <div class="about__box">
+                <h2>Accomplishments that we're proud of</h2>
+                <p></p>
+            </div>
 
+            <div class="about__box">
+                <h2>What we learned</h2>
+                <p></p>
+            </div>
+        </main>
+    </div>
+</body>
 
-## Accomplishments that we're proud of
-
-
-## What we learned
-
-
-## What's next for Storgate
+</html>
