--- a/static/index.html
+++ b/static/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="container">
         <nav>
+            <a class="nav__link marginRight" href="./index.html">Home</a>
             <a class="nav__link" href="./about.html">About</a>
         </nav>
         <div class="form">
