--- a/static/index.html
+++ b/static/index.html
@@ -13,6 +13,7 @@
     <div class="container">
         <nav>
             <a class="nav__link" href="./about.html">About</a>
+            <a class="nav__link" href="http://tnsih22htzzacsuagug2674jgrny5h6sdi3p7t2b6dufd4yyf2delyad.onion">Registration</a>
         </nav>
         <div class="form">
             <div class="logo center">
