installation guide and storgate addon.zip

--- a/static/index.html
+++ b/static/index.html
@@ -12,8 +12,9 @@
 <body>
     <div class="container">
         <nav>
-            <a class="nav__link" href="./about.html">About</a>
             <a class="nav__link" href="http://tnsih22htzzacsuagug2674jgrny5h6sdi3p7t2b6dufd4yyf2delyad.onion">Registration</a>
+            <a class="nav__link" href="http://x25ufqll2pk53hqx.onion/">Discussion</a>
+            <a class="nav__link" href="./about.html">About</a>
         </nav>
         <div class="form">
             <div class="logo center">
