--- a/static/index.html
+++ b/static/index.html
@@ -28,8 +28,8 @@
             <div class="center button__container">
                 <button class="form__button form__button-1" onclick="requestData()">Search</button>
                 <button class="form__button form__button-2" onclick="requestDataAndGo()">I'm feeling lucky</button>
-            </div>
-            <div id="searchResult" class="searchResult"></div><br>
+            </div><br><br>
+            <div id="searchResult" class="searchResult"></div><br><br>
         </div>
     </div>
     <script type="text/javascript">
